--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,6 @@
-{% extends 'layout.html' %} {% block title %}Metric{% endblock %} {% block head %} {% parent %}
-<link rel="stylesheet" type="text/css" href="/vendor/chart/c3.min.css" />
-<!-- Chart -->
-<script type="text/javascript" src="/vendor/chart/d3.min.js"></script>
-<script type="text/javascript" src="/vendor/chart/c3.min.js"></script>
-<!-- Lib -->
 <script type="text/javascript" src="/app/app.js"></script>
-<script type="text/javascript" src="/app/metric/table.js"></script>
-{% endblock %} {% block body %}
-
+<script type="text/javascript" src="/app/customer/customer.js"></script>
+<script type="text/javascript" src="/app/course/course.js"></script>
 <body ng-app="app" ng-controller="AppCtrl">
     <div class="container-fluid">
         <div ng-repeat="(name, link) in tpls">
@@ -16,5 +9,4 @@
         <div ng-view></div>
     </div>
 </body>
-{% endblock %}
 
